--- a/style.css
+++ b/style.css
@@ -137,10 +137,7 @@ ul.nav a, ul.nav a:link, ul.nav a:active, ul.nav a:visited, ul.nav a:hover, ul.n
 .header, .content, .footer { 
 	margin: 30px;
 	max-width: 700px;
-	background: rgba(0,0,0,0.4);
-	background/*\**/: url(img/bg/black_40.png)\9;
-	color: rgba(255,255,255,0.9);
-	color/*\**/: rgb(250,250,250)\9;
+	color: navy;
 	padding: 4em;
     width: 700px;
 -webkit-box-shadow: 2px 2px 5px rgba(50, 50, 50, 0.75);
@@ -386,11 +383,6 @@ input[type=text]:hover, input[type=text]:focus, input[type=password]:hover, inpu
 
 @media screen and (max-width: 1050px) {
 
-    .main {
-        background: rgba(0,0,0,0.4);
-        background/*\**/: url(img/bg/black_40.png)\9;
-		background-attachment: fixed;
-	}
 	.header, .content, .footer {
         margin: 0;
         max-width: none;
