--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ html, body {
     min-height: 100%;
     height: 100%;
 	line-height: 23px;
-	background: url('img/bg-pattern-black.png') repeat;
+	background: white;
+	color: black;
     text-align: center;
 	}
 body {
@@ -398,10 +399,6 @@ input[type=text]:hover, input[type=text]:focus, input[type=password]:hover, inpu
 
 html, body {	height: auto;}
 
-.main {	background: none; }
-body { 	background: rgba(0,0,0,0.4);
-        background/*\**/: url(img/bg/black_40.png)\9;
-	}
 
 
 h1 {
